[tool.mypy]
ignore_missing_imports = true

[project]
name = "copr-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "copr>=2.5",
    "httpx>=0.28.1",
    "pydantic-ai-slim[anthropic,mcp]>=1.73.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.1",
]
